--- a/formulas/dynamic_arrays.html
+++ b/formulas/dynamic_arrays.html
@@ -8,7 +8,6 @@
 
         <!-- Custom HTML head -->
         
-        <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
@@ -34,13 +33,13 @@
     </head>
     <body>
         <!-- Provide site root to javascript -->
-        <script type="text/javascript">
+        <script>
             var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
-        <script type="text/javascript">
+        <script>
             try {
                 var theme = localStorage.getItem('mdbook-theme');
                 var sidebar = localStorage.getItem('mdbook-sidebar');
@@ -56,7 +55,7 @@
         </script>
 
         <!-- Set the theme before any content is loaded, prevents flash -->
-        <script type="text/javascript">
+        <script>
             var theme;
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
@@ -68,7 +67,7 @@
         </script>
 
         <!-- Hide / unhide sidebar before it is displayed -->
-        <script type="text/javascript">
+        <script>
             var html = document.querySelector('html');
             var sidebar = 'hidden';
             if (document.body.clientWidth >= 1080) {
@@ -100,7 +99,7 @@
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
                             <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust (default)</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
@@ -132,7 +131,7 @@
                 </div>
 
                 <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-                <script type="text/javascript">
+                <script>
                     document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                     document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
                     Array.from(document.querySelectorAll('#sidebar a')).forEach(function(link) {
@@ -435,8 +434,7 @@ values that can vary in size depending on the the filter results:</p>
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>This formula gives the results shown in the image below. The dynamic range
 here is &quot;F2:I5&quot; but it can vary based on the filter criteria.</p>
 <p><img src="../../images/dynamic_arrays02.png" alt="Image 2 of output from app_dynamic_arrays.rs" /></p>
@@ -461,8 +459,7 @@ function to get a static/CSE range and
 applies to. However, since the range is dynamic this generally won't be known in
 advance in which case you can specify the range with the same start and end
 cell. The following range is &quot;F2:F2&quot;:</p>
-<pre><code class="language-rust">    worksheet1.write_dynamic_array_formula_only(1, 5, 1, 5, &quot;=FILTER(A1:D17,C1:C17=K2)&quot;)?;
-</code></pre>
+<pre><code class="language-rust">    worksheet1.write_dynamic_array_formula_only(1, 5, 1, 5, &quot;=FILTER(A1:D17,C1:C17=K2)&quot;)?;</code></pre>
 <p>As a syntactic shortcut you can use the <code>worksheet.write_dynamic_formula()</code>
 function which only requires the start cell:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
@@ -736,8 +733,7 @@ function which only requires the start cell:</p>
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <p>For a wider and more general introduction to dynamic arrays see the following:
 <a href="https://exceljet.net/dynamic-array-formulas-in-excel">Dynamic array formulas in Excel</a>.</p>
 <h2 id="the-implicit-intersection-operator-"><a class="header" href="#the-implicit-intersection-operator-">The Implicit Intersection Operator &quot;@&quot;</a></h2>
@@ -1061,8 +1057,7 @@ following formula:</p>
 </span><span class="boring">    }
 </span><span class="boring">
 </span><span class="boring">    Ok(())
-</span><span class="boring">}
-</span></code></pre>
+</span><span class="boring">}</span></code></pre>
 <h2 id="the-excel-365-lambda-function"><a class="header" href="#the-excel-365-lambda-function">The Excel 365 LAMBDA() function</a></h2>
 <p>Recent versions of Excel 365 have introduced a powerful new function/feature
 called <code>LAMBDA()</code>. This is similar to closure expressions in Rust or [lambda
@@ -1123,8 +1118,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     workbook.save(&quot;lambda.xlsx&quot;)?;
 
     Ok(())
-}
-</code></pre>
+}</code></pre>
 <p>Note, that the formula name must have a &quot;_xlfn.&quot; prefix and the parameters in
 the <code>LAMBDA()</code> function must have a &quot;_xlpm.&quot;  prefix for compatibility with how
 the formulas are stored in Excel. These prefixes won't show up in the formula,
@@ -1166,18 +1160,18 @@ names to calculation results.</p>
 
 
 
-        <script type="text/javascript">
+        <script>
             window.playground_copyable = true;
         </script>
 
 
-        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
