--- a/changelog.html
+++ b/changelog.html
@@ -166,7 +166,7 @@ an image, moves when the cells underneath it are moved, resized or deleted.</li>
 <li>
 <p>Added support for worksheet protection via the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.protect"><code>worksheet.protect()</code></a>,
 <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.protect_with_password"><code>worksheet.protect_with_password()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.protect_with_options"><code>worksheet.protect_with_options()</code></a>.</p>
-<p>See also the section on <a href="https://rustxlsxwriter.github.io/worksheet/create.html">Worksheet protection</a> in the user guide.</p>
+<p>See also the section on <a href="https://rustxlsxwriter.github.io/worksheet/protection.html">Worksheet protection</a> in the user guide.</p>
 </li>
 <li>
 <p>Add option to make the xlsx file read-only when opened by Excel via the
